# fsys

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: common.fypp
src/: CMakeLists.txt  fsys.f90  fsys.fypp  fsys_isatty.f90  fsys_isatty.fypp  fsys_sleep.f90  fsys_sleep.fypp  fsys_winsize.fypp  mod_fsys_common.f90  mod_fsys_common.fypp  winsize_unix.c  winsize_win.c
test/: CMakeLists.txt  test_isatty.f90  test_sleep.f90  test_winsize.f90
